[project]
name = "comfyui_custom_node_image"
description = "Nodes:ImageCropCircle."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["diffusers", "tqdm", "boto3"]

[project.urls]
Repository = "https://github.com/jstit/comfyui_custom_node_image"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_custom_node_image"
Icon = ""
